# testsctp

./: CMakeCommon.cmake  CMakeDefine.cmake  CMakeInclude.cmake  CMakeLibrary.cmake  CMakeLists.txt  CMakeSource.cmake  CMakeSubPrj.cmake  CMakeUtility.cmake  README.md  SctpWrapper.cpp  SctpWrapper.h  clientDemo.cc  testclient.cc  testserver.cc
CMakeUtility/: CMakeInclude.cmake  CMakeLibrary.cmake  CMakeSource.cmake  CMakeUtility.cmake
usrsctplib/: CMakeLists.txt  user_recv_thread.c
